fix-mobile-size-layout-5.0

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -66,7 +66,7 @@ const PROJECTS = [
       "Created from scratch, this media player allows you to listen to your favorite songs from the band Bring Me The Horizon. It features a sleek design and smooth functionality.",
     link: "https://github.com/Santiagosba/portfolio",
     github: "https://github.com/Santiagosba/portfolio",
-    image: "/projects/bmth_media_player.png",
+    image: "/projects/bmth_media_player.webp",
     tags: [ TAGS.HTML,TAGS.CSS,TAGS.JAVASCRIPT,TAGS.REACT,TAGS.VITE],
   },
   {
@@ -75,7 +75,7 @@ const PROJECTS = [
       "Created from scratch, this Pong game have realistic physics and smooth gameplay. It features a sleek design and smooth functionality. You can play it solo or with a friend in the classic two-player mode, with the old design.",
     link: "https://github.com/Santiagosba/portfolio",
     github: "https://github.com/Santiagosba/portfolio",
-    image: "/projects/pong_game.png",
+    image: "/projects/pong_game.webp",
     tags: [TAGS.HTML,TAGS.CSS,TAGS.JAVASCRIPT],
   },
    {
@@ -84,7 +84,7 @@ const PROJECTS = [
       "Created from scratch, this Rubik's Cube solver uses advanced algorithms to help you solve the puzzle quickly and efficiently. It features a user-friendly interface and step-by-step instructions.",
     link: "https://github.com/Santiagosba/portfolio",
     github: "https://github.com/Santiagosba/portfolio",
-    image: "/projects/RubikCube.png",
+    image: "/projects/RubikCube.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.JAVASCRIPT, TAGS.REACT, TAGS.VITE],
   },
  
@@ -94,7 +94,7 @@ const PROJECTS = [
       "Created from scratch, this digital clock features a military design and allows you to keep track of time in a unique way. It includes various functionalities such as format selection, current date and time display of all time zones.",
     link: "https://github.com/Santiagosba/portfolio",
     github: "https://github.com/Santiagosba/portfolio",
-    image: "/projects/Digital World Clock.png",
+    image: "/projects/Digital World Clock.webp",
     tags: [TAGS.HTML,TAGS.CSS,TAGS.JAVASCRIPT],
   },
   {
@@ -103,7 +103,7 @@ const PROJECTS = [
       "This Hangman game includes various functionalities such as word selection, difficulty levels, and a fun design. You can play solo or with a friend in the classic two-player mode.",
     link: "https://github.com/Santiagosba/portfolio",
     github: "https://github.com/Santiagosba/portfolio",
-    image: "/projects/hangman.png",
+    image: "/projects/hangman.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.JAVASCRIPT, TAGS.REACT, TAGS.VITE],
   },
    {
@@ -112,7 +112,7 @@ const PROJECTS = [
       "This blog allows users to create, read, update, and delete posts. You can be admin or user , you can comment and like post like a real social network.",
     link: "https://github.com/Santiagosba/portfolio",
     github: "https://github.com/Santiagosba/portfolio",
-    image: "/projects/blog.png",
+    image: "/projects/blog.webp",
     tags: [TAGS.HTML, TAGS.CSS, TAGS.JAVASCRIPT, TAGS.PHP, TAGS.MYSQL, TAGS.BOOTSTRAP],
   }
  
