fix-footer-back

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import Mailicon from "./icons/Mailicon.astro";
 
 
 <footer
-  class="animate-fade-in w-full py-10 text-white/90 bg-transparent backdrop-blur-sm drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)]"
+  class="animate-fade-in w-full py-10 text-white/90 bg-transparent  drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)]"
 >
   <div
     class="max-w-4xl mx-auto flex flex-col md:flex-row items-center justify-center md:justify-between gap-5 px-5 text-center"
