--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -81,6 +81,9 @@ import TailwindIcon from "./icons/TAILWINDCSSicon.astro";
     <h3 class="project-title">Blog CRUD</h3>
     <p class="project-desc">A complete CRUD blog built with PHP and MySQL, including user auth.</p>
     <div class="project-tags">
+      <HtmlIcon class="w-7 h-7" />
+      <CSSIcon class="w-7 h-7" />
+      <JavascriptIcon class="w-7 h-7" />
       <PHPIcon class="w-7 h-7" />
       <MYSQLicon class="w-7 h-7" />
       <BootsTrapIcon class="w-7 h-7" />
@@ -97,6 +100,7 @@ import TailwindIcon from "./icons/TAILWINDCSSicon.astro";
     <h3 class="project-title">Hang Man</h3>
     <p class="project-desc">A retro Hang Man game with a modern aesthetic.</p>
     <div class="project-tags">
+       <ReactIcon class="w-7 h-7" />
       <HtmlIcon class="w-7 h-7" />
       <CSSIcon class="w-7 h-7" />
       <TailwindIcon class="w-7 h-7" />
