--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,6 +8,7 @@ import PHPIcon from "./icons/PHPIcon.astro";
 import MYSQLicon from "./icons/MYSQLicon.astro";
 import BootsTrapIcon from "./icons/BootsTrapIcon.astro";
 import TailwindIcon from "./icons/TAILWINDCSSicon.astro";
+import TypeScriptIcon from "./icons/TypescriptIcon.astro";
 ---
 
 <div class="grid gap-10 md:grid-cols-2 lg:grid-cols-3 max-w-6xl mx-auto">
@@ -18,11 +19,12 @@ import TailwindIcon from "./icons/TAILWINDCSSicon.astro";
     <p class="project-desc">A custom music player to listen to Bring Me The Horizon.</p>
     <div class="project-tags">
       <ReactIcon class="w-7 h-7" />
+      <TypeScriptIcon class="w-7 h-7" />
       <ViteIcon class="w-7 h-7" />
       <TailwindIcon class="w-7 h-7" />
     </div>
     <div class="project-links">
-      <a href="https://github.com/tuusuario/music-player" target="_blank" class="btn">View Code</a>
+      <a href="https://github.com/Santiagosba/Bmth-Media-Player" target="_blank" class="btn">View Code</a>
       <a href="https://music-demo.vercel.app" target="_blank" class="btn">View Project</a>
     </div>
   </article>
@@ -35,10 +37,13 @@ import TailwindIcon from "./icons/TAILWINDCSSicon.astro";
     <div class="project-tags">
       <ReactIcon class="w-7 h-7" />
       <ViteIcon class="w-7 h-7" />
-      <TailwindIcon class="w-7 h-7" />
+      <HtmlIcon class="w-7 h-7" />
+      <CSSIcon class="w-7 h-7" />
+      <JavascriptIcon class="w-7 h-7" />
+      
     </div>
     <div class="project-links">
-      <a href="https://github.com/tuusuario/rubik-cube" target="_blank" class="btn">View Code</a>
+      <a href="https://github.com/Santiagosba/Bmth-Media-Player.git" target="_blank" class="btn">View Code</a>
       <a href="https://rubik-demo.vercel.app" target="_blank" class="btn">View Project</a>
     </div>
   </article>
@@ -54,7 +59,7 @@ import TailwindIcon from "./icons/TAILWINDCSSicon.astro";
       <JavascriptIcon class="w-7 h-7" />
     </div>
     <div class="project-links">
-      <a href="https://github.com/tuusuario/pong" target="_blank" class="btn">View Code</a>
+      <a href="https://github.com/Santiagosba/Pong-Game" target="_blank" class="btn">View Code</a>
       <a href="https://pong-demo.vercel.app" target="_blank" class="btn">View Project</a>
     </div>
   </article>
@@ -70,7 +75,7 @@ import TailwindIcon from "./icons/TAILWINDCSSicon.astro";
       <JavascriptIcon class="w-7 h-7" />
     </div>
     <div class="project-links">
-      <a href="https://github.com/tuusuario/world-clock" target="_blank" class="btn">View Code</a>
+      <a href="https://github.com/Santiagosba/Digital-World-Clock" target="_blank" class="btn">View Code</a>
       <a href="https://worldclock-demo.vercel.app" target="_blank" class="btn">View Project</a>
     </div>
   </article>
@@ -89,7 +94,7 @@ import TailwindIcon from "./icons/TAILWINDCSSicon.astro";
       <BootsTrapIcon class="w-7 h-7" />
     </div>
     <div class="project-links">
-      <a href="https://github.com/tuusuario/blog" target="_blank" class="btn">View Code</a>
+      <a href="https://github.com/Santiagosba/Blog-PHP-CRUD.git" target="_blank" class="btn">View Code</a>
       <a href="https://blog-demo.vercel.app" target="_blank" class="btn">View Project</a>
     </div>
   </article>
@@ -106,7 +111,7 @@ import TailwindIcon from "./icons/TAILWINDCSSicon.astro";
       <TailwindIcon class="w-7 h-7" />
     </div>
     <div class="project-links">
-      <a href="https://github.com/tuusuario/hangman" target="_blank" class="btn">View Code</a>
+      <a href="https://github.com/Santiagosba/HangMan-Game.git" target="_blank" class="btn">View Code</a>
       <a href="https://hangman-demo.vercel.app" target="_blank" class="btn">View Project</a>
     </div>
   </article>
