--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -9,6 +9,7 @@ import MYSQLicon from "./icons/MYSQLicon.astro";
 import BootsTrapIcon from "./icons/BootsTrapIcon.astro";
 import TailwindIcon from "./icons/TAILWINDCSSicon.astro";
 import TypeScriptIcon from "./icons/TypescriptIcon.astro";
+import ThreeJSIcon from "./icons/ThreeJSIcon.astro";
 ---
 
 <div class="grid gap-10 md:grid-cols-2 lg:grid-cols-3 max-w-6xl mx-auto">
@@ -37,10 +38,7 @@ import TypeScriptIcon from "./icons/TypescriptIcon.astro";
     <div class="project-tags">
       <ReactIcon class="w-7 h-7" />
       <ViteIcon class="w-7 h-7" />
-      <HtmlIcon class="w-7 h-7" />
-      <CSSIcon class="w-7 h-7" />
-      <JavascriptIcon class="w-7 h-7" />
-      
+      <ThreeJSIcon class="w-7 h-7" />
     </div>
     <div class="project-links">
       <a href="https://github.com/Santiagosba/Bmth-Media-Player.git" target="_blank" class="btn">View Code</a>
@@ -86,9 +84,7 @@ import TypeScriptIcon from "./icons/TypescriptIcon.astro";
     <h3 class="project-title">Blog CRUD</h3>
     <p class="project-desc">A complete CRUD blog built with PHP and MySQL, including user auth.</p>
     <div class="project-tags">
-      <HtmlIcon class="w-7 h-7" />
-      <CSSIcon class="w-7 h-7" />
-      <JavascriptIcon class="w-7 h-7" />
+    
       <PHPIcon class="w-7 h-7" />
       <MYSQLicon class="w-7 h-7" />
       <BootsTrapIcon class="w-7 h-7" />
@@ -106,8 +102,7 @@ import TypeScriptIcon from "./icons/TypescriptIcon.astro";
     <p class="project-desc">A retro Hang Man game with a modern aesthetic.</p>
     <div class="project-tags">
        <ReactIcon class="w-7 h-7" />
-      <HtmlIcon class="w-7 h-7" />
-      <CSSIcon class="w-7 h-7" />
+      <TypeScriptIcon class="w-7 h-7" />
       <TailwindIcon class="w-7 h-7" />
     </div>
     <div class="project-links">
