--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,16 +4,15 @@ import LinkedinIcon from "../components/icons/LinkedinIcon.astro";
 import Layout from "../layouts/Layout.astro";
 import GitHubIcon from "../components/icons/GitHubIcon.astro";
 import SocialPill from "../components/SocialPill.astro";
+import Mailicon from "../components/icons/Mailicon.astro";
 import InstagramIcon from "../components/icons/InstagramIcon.astro";
 import XIcon from "../components/icons/XIcon.astro";
-import Mailicon from "../components/icons/Mailicon.astro";
 import Experience from "../components/Experience.astro";
 import SectionConteiner from "../components/SectionConteiner.astro";
 import BriefcaseIcon from "../components/icons/BriefcaseIcon.astro";
 import CodeIcon from "../components/icons/CodeIcon.astro";
 import Projects from "../components/Projects.astro";
 ---
-
 
 <Layout
   title="Portfolio de Santiago Benítez Álvarez - Desarrollador y Programador web"
@@ -24,19 +23,19 @@ import Projects from "../components/Projects.astro";
     <SectionConteiner id="Home" class="py-44 pb-24">
       <img
         class="rounded-full w-50 h-40 ml-3 text-4xl md:text-5xl font-semibold text-white drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)] mb-12 animate-fade-in tracking-wide"
-        src="/Santydev_photo/_DSC7034.JPG"
-        alt="Santydev photo"
+        src="/Santydev_photo/_DSC7034.webp"
+        alt="Foto de Santiago Benítez Álvarez"
       />
-      <h1 id="About" class="ml-3 text-4xl md:text-5xl font-semibold text-white drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)] mb-12 animate-fade-in tracking-wide">
+      <h1 id="About" class="ml-3 text-4xl md:text-5xl font-semibold text-white drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)] mb-14 animate-fade-in tracking-wide">
         Hey, I'm Santiago Benítez Álvarez
-        <a href="https://es.linkedin.com/in/santiagosba" target="_blank" rel="noopener" class="w-full overflow-x-auto whitespace-nowrap relative -top-1.5 ml-2 drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)] animate-fade-in tracking-wide">
-          <Badge>Open to work</Badge> 
+        <a href="https://es.linkedin.com/in/santiagosba" target="_blank" rel="noopener noreferrer" class=" ml-2 relative -top-2 drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)] animate-fade-in tracking-wide inline-block">
+          <Badge>Open to work</Badge>
         </a>
       </h1>
       <h2 class="ml-3 text-2xl md:text-2xl font-semibold text-white drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)] mb-12 animate-fade-in tracking-wide">
-        <span>More of two years of experience.</span>
-        <span class="text-blue-300"> Web Developer and Content Creator.</span>
-        Based in <span class="text-red-300">Barcelona, España <img src="https://flagcdn.com/es.svg" alt="🇪🇸" class="inline w-8 h-5 align-middle"/></span>.
+        <span>More than two years of experience.</span>
+        <span class="text-blue-300"> Web Developer.</span>
+        Based in <span class="text-red-300">Barcelona, España <img src="https://flagcdn.com/es.svg" alt="Bandera de España" class="inline w-8 h-5 align-middle"/></span>.
         <span class="opacity-80">Specialized in creating unique applications.</span>
       </h2>
 
